# monocleaner

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pypi-publish.yml
monocleaner/: hardrules.py  monocleaner.py  monocleaner_score.py  monocleaner_train.py  util.py
scripts/: monocleaner  monocleaner-download  monocleaner-score  monocleaner-train
src/monocleaner/: __init__.py  hardrules.py  lm.py  monocleaner.py  monocleaner_train.py  normalize.py
